--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlowWorks Lighting Solutions - Professional Holiday & Event Lighting</title>
-    <meta name="description" content="Professional holiday and event lighting services in Orange County, Los Angeles, and Inland Empire. Year-round lighting solutions for homes and businesses.">
+    <title>Turn Your Home or Business Into a Holiday Masterpiece Without Lifting a Finger</title>
+    <meta name="description" content="Premium holiday lighting design, installation, takedown, and storage for homeowners and businesses across Orange County, Los Angeles, and the Inland Empire. We use custom-fit LED displays so your property shines brighter, all stress-free.">
     <style>
         * {
             margin: 0;
