--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                         </div>
                         <div class="contact-item">
                             <h4>💰 Free Services</h4>
-                            <p>• Free on-site consultation<br>• Free detailed quote<br>• Free design mockup<br>• Free project timeline</p>
+                            <p>• Free consultation<br>• Free detailed quote<br>• Free project timeline</p>
                         </div>
                     </div>
                 </div>
@@ -769,7 +769,7 @@
         <div class="section-header">
             <div class="container">
                 <h1>Frequently Asked Questions</h1>
-                <p>Everything you need to know about our lighting services</p>
+                <p>Everything You Need to Know About our Lighting Services</p>
             </div>
         </div>
         <section class="faq-content">
@@ -780,67 +780,67 @@
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Our pricing varies based on project size, complexity, and services needed. Residential projects typically range from $800-$4,500, while commercial projects are custom quoted. We offer free on-site consultations and detailed quotes with no hidden fees.</p>
+                        <p>Our pricing varies based on project size, complexity, and services needed. Residential projects typically range from $10-15 per foot, while commercial projects are custom quoted. We offer free consultations and detailed quotes with no hidden fees.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Do you provide lights or do I need to buy them?</h3>
+                        <h3>Do You Provide Lights or do I Need to Buy Them?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>We provide all commercial-grade LED lights, electrical connections, timers, and installation hardware. Everything is included in your quote - you don't need to purchase anything separately.</p>
+                        <p>While We Can Hang Your Lights, We Actually Provide All Commercial-Grade LED Lights, Electrical Connections, Timers, and Installation Hardware. Everything is Included in Your Quote, You Don't Need to Purchase Anything Separately.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>How far in advance should I book?</h3>
+                        <h3>How Far in Advance Should I Book?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>For Christmas lighting, we recommend booking by October for best availability. Halloween projects should be booked by early September. Other events and permanent installations can typically be scheduled 2-4 weeks in advance.</p>
+                        <p>For Christmas Lighting, we Recommend Booking by November for First Choice and Best Availability. We Start as Early as November 1st and Can Handle a Few Clients Per Day. Halloween Projects Should be Booked by Early September. Other Events and Permanent Installations can Typically be Scheduled 4-6 Weeks in Advance.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Do you take down and store the lights?</h3>
+                        <h3>Do You Take Down and Store the Lights?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Yes! We offer full take-down and storage services. Your lights are carefully removed, inspected, and stored in our climate-controlled facility until next season. This service is included in many of our packages.</p>
+                        <p>Yes! We Offer Full Take-Down and Storage Services. Your Lights are Carefully Removed, Inspected, and Stored in our Climate-Controlled Facility Until Next Season. This Service is Included in Many of Our Packages and Will be Re-used as Long as Your Contract is Active, and You Can Switch Up The Custom Design Year to Year.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Are you licensed and insured?</h3>
+                        <h3>Are You Licensed and Insured?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Absolutely. GlowWorks is fully licensed, bonded, and insured with comprehensive liability coverage. We can provide certificates of insurance upon request and all installations meet local electrical codes.</p>
+                        <p>Absolutely. GlowWorks is Fully Licensed, Bonded, and Insured With Comprehensive Liability Coverage. We Can Provide Certificates of Insurance Upon Request and all Installations Meet Local Electrical Codes.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>Do you offer payment plans or financing?</h3>
+                        <h3>Do You Offer Payment Plans or Financing?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>We require a 50% deposit to secure your installation date and purchase materials, with the balance due upon completion. For larger commercial projects, we can discuss extended payment terms on a case-by-case basis.</p>
+                        <p>We Require a 50% Deposit to Secure Your Installation Date and Purchase Materials, With the Balance Due Upon Completion. For Larger Commercial Projects, We Can Discuss Extended Payment Terms on a Case-by-Case Basis.</p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        <h3>What makes GlowWorks different from competitors?</h3>
+                        <h3>What Makes GlowWorks Different From Competitors?</h3>
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>We're a year-round lighting company, not just seasonal. We use commercial-grade equipment, provide full-service support, maintain comprehensive insurance, and focus on building long-term relationships with our clients. Quality and professionalism are our priorities.</p>
+                        <p>We're a Year-Round Lighting Company, Not Just Seasonal. We Use Commercial-Grade Equipment, Provide Full-Service Support, Maintain Comprehensive Insurance, and Focus on Building Long-Term Relationships With Our Clients. Quality and Professionalism Are Our Priorities.</p>
                     </div>
                 </div>
             </div>
@@ -894,7 +894,7 @@
         // Form Submission
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            alert('Thank you for your inquiry! We\'ll contact you within 24 hours with your free quote.');
+            alert('Thank You For Your Inquiry! We\'ll Contact You Within 24 Hours To Discuss Your Free Quote.');
             this.reset();
         });
 
