--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turn Your Home or Business Into a Holiday Masterpiece Without Lifting a Finger</title>
-    <meta name="description" content="Premium holiday lighting design, installation, takedown, and storage for homeowners and businesses across Orange County, Los Angeles, and the Inland Empire. We use custom-fit LED displays so your property shines brighter, all stress-free.">
+    <meta name="description" content="Premium Holiday Lighting Design, Installation, Takedown, and Storage For Homeowners and Businesses Across Orange County, Los Angeles, and the Inland Empire. We Use Custom-Fit LED Displays so Your Property Shines Brighter, All Stress-Free.">
     <style>
         * {
             margin: 0;
