--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@
     <div id="home" class="page active">
         <section class="hero">
             <div class="container">
-                <h1>GlowWorks Lighting Solutions</h1>
-                <p>Transform your space with professional holiday and event lighting. Year-round services for homes and businesses across Southern California.</p>
-                <a href="#" onclick="showPage('contact')" class="cta-button">Get Free Quote</a>
+                <h1>Turn Your Home or Business Into a Holiday Masterpiece Without Lifting a Finger</h1>
+                <p>Premium Holiday Lighting Design, Installation, Takedown, and Storage For Homeowners and Businesses Across Orange County, Los Angeles, and the Inland Empire. We Use Custom-Fit LED Displays so Your Property Shines Brighter, All Stress-Free.</p>
+                <a href="#" onclick="showPage('contact')" class="cta-button">Get Your Free Quote</a>
             </div>
         </section>
 
@@ -542,38 +542,38 @@
             <div class="container">
                 <div class="section-header">
                     <h1>Why Choose GlowWorks?</h1>
-                    <p>Professional lighting solutions that bring your vision to life</p>
+                    <p>Professional Lighting Solutions That Bring Your Vision to Life</p>
                 </div>
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-icon">🎄</div>
-                        <h3>Holiday Lighting</h3>
-                        <p>Christmas, Halloween, Valentine's Day, 4th of July, and all seasonal celebrations with custom designs.</p>
+                        <h3>Custom Lighting Designs</h3>
+                        <p>Christmas, Halloween, Valentine's Day, 4th of July, and Everything In-Between, Tailored to Your Home, Business or Event.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">🎉</div>
                         <h3>Event Lighting</h3>
-                        <p>Weddings, parties, corporate events, and special occasions with professional-grade equipment.</p>
+                        <p>Weddings, Parties, Corporate Events, and Special Occasions With Professional-Grade Equipment.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">🏢</div>
                         <h3>Commercial Services</h3>
-                        <p>Restaurants, retail stores, office buildings, and business properties with architectural lighting.</p>
+                        <p>Restaurants, Retail Stores, Office Buildings, and Business Properties With Architectural Lighting.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">🔧</div>
                         <h3>Full Service</h3>
-                        <p>Design, installation, maintenance, storage, and take-down services. We handle everything.</p>
+                        <p>Design, Installation, Maintenance, Storage, and Take-Down Services. We Handle Everything.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">⚡</div>
                         <h3>Professional Grade</h3>
-                        <p>Commercial LED lights, proper electrical connections, weatherproof installations, and safety first.</p>
+                        <p>Commercial LED Lights, Proper Electrical Connections, Weatherproof Installations, and Safety First.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">📞</div>
                         <h3>Year-Round Support</h3>
-                        <p>Available 365 days a year for installations, repairs, and emergency lighting services.</p>
+                        <p>Available 365 Days a Year For Installations, Repairs, and Emergency Lighting Services.</p>
                     </div>
                 </div>
             </div>
@@ -585,7 +585,7 @@
         <div class="section-header">
             <div class="container">
                 <h1>About GlowWorks</h1>
-                <p>Your trusted partner for professional lighting solutions</p>
+                <p>Your Trusted Partner For Professional Lighting Solutions</p>
             </div>
         </div>
         <section class="about-content">
