--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
+    <nav>,
         <div class="container">
-            <div class="logo">✨ GlowWorks</div>
+            <div class="logo"> <img src="images/GlowWorks Rectangle SVG" alt="GlowWorks Lighting Solutions Logo"> </div>
             <ul>
                 <li><a href="#" onclick="showPage('home')" class="active">Home</a></li>
                 <li><a href="#" onclick="showPage('about')">About</a></li>
