--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     <!-- Navigation -->
     <nav>,
         <div class="container">
-            <div class="logo"> <img src="images/GlowWorks Rectangle SVG" alt="GlowWorks Lighting Solutions Logo"> </div>
+            <div class="logo"> <img src="https://github.com/glowworkslightingsolutions/GlowWorks.github.io/blob/docs/GW%20Rectangle%20SVG.svg" alt="GlowWorks Lighting Solutions Logo"> </div>
             <ul>
                 <li><a href="#" onclick="showPage('home')" class="active">Home</a></li>
                 <li><a href="#" onclick="showPage('about')">About</a></li>
