--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
             padding: 1rem 20px;
         }
 
-        .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #FFD700;
-            text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+        .logo img {
+             height: 60px;
+             width: auto;
         }
 
         nav ul {
