--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         /* Home Page Styles */
         .hero {
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a0a2e 50%, #0a0a0a 100%);
+            background: linear-gradient(135deg, #FFCC4D 0%, #57C7BE 50%, #38B6FF 100%);
             color: white;
             text-align: center;
             padding: 6rem 0 4rem;
@@ -131,7 +131,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(circle at 50% 50%, rgba(255, 215, 0, 0.1) 0%, transparent 70%);
+            background:black;
             animation: pulse 4s ease-in-out infinite;
         }
 
@@ -143,7 +143,7 @@
         .hero h1 {
             font-size: 3.5rem;
             margin-bottom: 1rem;
-            background: linear-gradient(45deg, #FFD700, #FFA500, #FF6B35);
+            background: linear-gradient(45deg, #FFCC4D, #57C7BE, #38B6FF);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -164,7 +164,7 @@
 
         .cta-button {
             display: inline-block;
-            background: linear-gradient(45deg, #FFD700, #FFA500);
+            background: linear-gradient(45deg, #FFCC4D, #38B6FF);
             color: #000;
             padding: 1rem 2rem;
             text-decoration: none;
